feat: implement web search

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,10 +5,11 @@ WORKDIR /app
 # Development stage
 FROM base AS development
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
-# Copy requirements
+# Copy requirements first to leverage Docker cache
 COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
@@ -20,14 +21,5 @@ EXPOSE 8000
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
 # Production stage
-FROM base AS production
-# Copy requirements
-COPY requirements.txt .
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-# Copy rest of the application
-COPY . .
-# Expose port
-EXPOSE 8000
-# Start production server
+FROM development AS production
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"] 
