--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,10 @@
-fastapi>=0.68.0,<0.69.0
-uvicorn>=0.15.0,<0.16.0
-python-dotenv>=0.19.0,<0.20.0
-openai>=1.0.0
-beautifulsoup4>=4.12.0
-aiohttp>=3.9.0
-lxml>=4.9.0
-requests>=2.31.0
-langchain-core>=0.1.0
-langchain>=0.1.0
-langchain-community>=0.0.13 
+fastapi==0.68.2
+uvicorn==0.15.0
+python-dotenv==0.19.0
+openai==1.0.0
+beautifulsoup4==4.12.0
+aiohttp==3.9.0
+lxml==4.9.0
+requests==2.31.0
+crawl4ai==0.1.0
+bs4==0.0.1 
